# fixed_string

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  docusaurus.config.js  package.json
.github/workflows/: clang-tidy-review.yml  clang-tidy.yml  documentation.yml  macos.yml  ubuntu.yml  windows.yml
docs/: about.md
docs/api/: _category_.json
docs/api/free-functions/: _category_.json
docs/api/free-functions/swap/: 1.cpp
docs/api/member-functions/: c_str.mdx  empty.mdx  ends_with.mdx  find.mdx  front.mdx  operator-assign.mdx  rbegin.mdx
docs/api/member-functions/at/: 2.cpp
docs/api/member-functions/compare/: 2.cpp  4.cpp  example.cpp
docs/api/member-functions/constructors/: 1.cpp
docs/api/member-functions/contains/: 1.cpp  example.cpp
docs/api/member-functions/data/: 1.cpp
docs/api/member-functions/end/: 2.cpp  3.cpp
docs/api/member-functions/find/: 4.cpp
docs/api/member-functions/front/: example.cpp
docs/api/member-functions/max_size/: 1.cpp
docs/api/member-functions/rbegin/: 1.cpp
docs/api/member-functions/rend/: 2.cpp  3.cpp
docs/api/member-functions/size/: 2.cpp
docs/api/member-functions/substr/: example.cpp
docs/components/: LinkButton.jsx
documentation/: docusaurus.config.js  package-lock.json  package.json
documentation/docs/: about.md
documentation/docs/api/: basic_fixed_string.md
documentation/docs/api/free-functions/: swap.mdx
documentation/docs/api/member-functions/: _category_.json  at.mdx  back.mdx  (+15 more)
documentation/docs/components/: CppOverload.jsx  CppOverloadList.jsx
documentation/src/css/: custom.css
documentation/src/pages/: index.js  index.module.css
include/: fixed_string.hpp
test/: CMakeLists.txt  test.cpp
test/minitest/: minitest.h  minitest_main.cpp
(+59 files in other folders)
